--- a/config.yml
+++ b/config.yml
@@ -2,19 +2,13 @@
 habr:
   # Список интересующих хабов (используется "слаг" из URL)
   hubs:
-    - python
     - artificial_intelligence
-    - go
-    - linux_admin
-    - rust_lang
 
-  # Правила для автоматического отсева "мусора"
-  filters:
-    # Статьи с рейтингом строго меньше этого значения будут отброшены
-    min_rating: 5
-    # Статьи, содержащие эти слова в заголовке (без учета регистра), будут отброшены
-    exclude_keywords:
-      - "дайджест"
-      - "карьера"
-      - "собеседование"
-      - "вакансии"
+  # Шаблон ссылки для получения RSS-ленты хаба.
+  # {hub_slug} будет заменен на слаг хаба из списка выше.
+  rss_template: "https://habr.com/ru/rss/hubs/{hub_slug}/articles/?limit=100"
+
+  # Опциональный порог по дате. Статьи, опубликованные до этой даты, будут игнорироваться
+  # при первом сборе, если база данных пуста. Формат: YYYY-MM-DD HH:MM:SS (UTC).
+  # Пример: 2023-01-01 00:00:00
+  initial_fetch_date:
