--- a/config.yml
+++ b/config.yml
@@ -10,5 +10,11 @@ habr:
 
   # Опциональный порог по дате. Статьи, опубликованные до этой даты, будут игнорироваться
   # при первом сборе, если база данных пуста. Формат: YYYY-MM-DD HH:MM:SS (UTC).
-  # Пример: 2023-01-01 00:00:00
-  initial_fetch_date:
+  # Раскомментируйте и установите дату, если хотите ограничить первый сбор:
+  # initial_fetch_date: "2025-11-01 00:00:00"
+  initial_fetch_date: 2025-11-16 00:00:00
+
+  # Автоматически обновлять метаданные (рейтинг, комментарии, просмотры) для статей,
+  # опубликованных за последние N дней при выполнении fetch.
+  # Установите 0 для отключения автообновления.
+  auto_update_within_days: 3
