move to TUI - initial

--- a/config.yml
+++ b/config.yml
@@ -1,20 +1,13 @@
-# Конфигурация для источника Habr
-habr:
-  # Список интересующих хабов (используется "слаг" из URL)
-  hubs:
-    - artificial_intelligence
-
-  # Шаблон ссылки для получения RSS-ленты хаба.
-  # {hub_slug} будет заменен на слаг хаба из списка выше.
-  rss_template: "https://habr.com/ru/rss/hubs/{hub_slug}/articles/?limit=100"
-
-  # Опциональный порог по дате. Статьи, опубликованные до этой даты, будут игнорироваться
-  # при первом сборе, если база данных пуста. Формат: YYYY-MM-DD HH:MM:SS (UTC).
-  # Раскомментируйте и установите дату, если хотите ограничить первый сбор:
-  # initial_fetch_date: "2025-11-01 00:00:00"
-  initial_fetch_date: 2025-11-16 00:00:00
-
-  # Автоматически обновлять метаданные (рейтинг, комментарии, просмотры) для статей,
-  # опубликованных за последние N дней при выполнении fetch.
-  # Установите 0 для отключения автообновления.
-  auto_update_within_days: 3
+sources:
+  habr:
+    type: habr
+    hubs:
+      - artificial_intelligence
+    rss_template: "https://habr.com/ru/rss/hubs/{hub_slug}/articles/?limit=100"
+    initial_fetch_date: "2025-11-16 00:00:00"
+    auto_update_within_days: 3
+    display:
+      article_meta:
+        - { field: "extra_data", key: "rating", icon: "★" }
+        - { field: "extra_data", key: "views_count", icon: "👁" }
+        - { field: "comments_data", key: "count", icon: "💬" }
