--- a/config.yml
+++ b/config.yml
@@ -3,6 +3,7 @@ sources:
     type: habr
     hubs:
       - artificial_intelligence
+      - circuit-design
     rss_template: "https://habr.com/ru/rss/hubs/{hub_slug}/articles/?limit=100"
     initial_fetch_date: "2025-11-16 00:00:00"
     auto_update_within_days: 3
